# ha-waveshare-thermal

./: .gitignore  README.md  debug_thermal_connection.py  debug_thermal_generation.py  hacs.json  simple_connect.py  test_commands.py  viewer_like_connect.py
.github/workflows/: bump_version.yml  release.yml
custom_components/waveshare_thermal/: __init__.py  __init__.py.tmp  camera.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
repo/: LICENSE  README.md
repo/Node_Thermal_TCP/: client.js  package-lock.json
repo/Node_Thermal_TCP/public/: index.html  style.css
repo/senxorESP32S3/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
repo/senxorESP32S3/components/Applications/: CMakeLists.txt
repo/senxorESP32S3/components/Applications/include/: AutoGain.h  Customer_Interface.h  SenXor_PowerDownMode.h  Senxor_Capturedata.h  Version.h
repo/senxorESP32S3/components/Applications/src/: AutoGain.c  Customer_Interface.c  SenXor_PowerDownMode.c  Senxor_Capturedata.c  version.c
repo/senxorESP32S3/components/SenXorLib/: CMakeLists.txt  SenXorLib.h
repo/senxorESP32S3/components/SenXorLib/include/: defines.h
repo/senxorESP32S3/components/drivers/: CMakeLists.txt
repo/senxorESP32S3/components/drivers/include/: DrvGPIO.h  DrvLCD.h  DrvLED.h  DrvNVS.h  DrvSPIHost.h  DrvTimer.h  DrvUSB.h  DrvWLAN.h  Drv_BT.h  Drv_BTSec.h  Drv_Boot.h  Drv_CRC.h  MCU_Dependent.h  SenXor_FLASH.h
repo/senxorESP32S3/components/drivers/src/: DrvGPIO.c  DrvLCD.c  DrvLED.c  DrvNVS.c  DrvSPIHost.c  DrvTimer.c  DrvUSB.c  DrvWLAN.c  Drv_BT.c  Drv_BTSec.c  Drv_Boot.c  Drv_CRC.c  MCU_Dependent.c  SenXor_FLASH.c
repo/senxorESP32S3/components/imageProcessingLib/: CMakeLists.txt
repo/senxorESP32S3/components/imageProcessingLib/include/: imageProcessingLib.h
repo/senxorESP32S3/components/net/: CMakeLists.txt
repo/senxorESP32S3/components/net/include/: restServer.h
repo/senxorESP32S3/components/net/src/: restServer.c
repo/senxorESP32S3/components/util/: CMakeLists.txt
repo/senxorESP32S3/components/util/include/: Inter_dark.h  MeridianLogo.h  More_perfect_VGA.h  More_perfect_VGA_dark.h  More_perfect_VGA_light.h  cmdParser.h  colourmap.h  icons.h  msg.h  simpleGFX.h  util.h
repo/senxorESP32S3/components/util/src/: cmdParser.c  util.c
repo/senxorESP32S3/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  ledCtrlTask.c  main.c  senxorTask.c  tcpServerTask.c  usbSerialTask.c
repo/senxorESP32S3/main/include/: ledCtrlTask.h  senxorTask.h  tcpServerTask.h  usbSerialTask.h
repo/senxorESP32S3/main/ulp/: main.c
